[package]
name = "discord_insult_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "cache", "voice"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
anyhow = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
rand = "0.8"
songbird = "0.3"
uuid = { version = "1.8", features = ["v4"] }
